--- a/3D/Base.lproj/Main.storyboard
+++ b/3D/Base.lproj/Main.storyboard
@@ -37,6 +37,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="backgroundImageView" destination="5hx-7I-GpL" id="fOO-bg-3iE"/>
                         <outlet property="containerView" destination="Kj0-wq-uNO" id="gIf-Zt-UeO"/>
                         <outlet property="scrollView" destination="iyI-oI-M8W" id="ytg-44-NP0"/>
                     </connections>
